--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1 class="mr-2">Mingalaba</h1>
+      <h1 class="mr-2">RLS History Club</h1>
       <a
         target="_blank"
         href="/rss.xml"
@@ -41,10 +41,8 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a>
 
       <p>
-        AstroPaper is a minimal, responsive, accessible and SEO-friendly Astro
-        blog theme. This theme follows best practices and provides accessibility
-        out of the box. Light and dark mode are supported by default. Moreover,
-        additional color schemes can also be configured.
+        Welcome to RLS History Club's official blog website! <br / >
+        We are excited to create a history-centered community in Stevenson School.
       </p>
       <p>
         Read the blog posts or check
@@ -52,7 +50,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
           className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
           href="https://github.com/satnaing/astro-paper#readme"
         >
-          README
+          About
         </LinkButton> for more info.
       </p>
       {
