--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,7 +15,7 @@ const { activeNav } = Astro.props;
   <div class="nav-container">
     <div class="top-nav-wrap">
       <a href="/" class="logo whitespace-nowrap font-medium">
-        Home Page
+        RlsHistoryClub
       </a>      
       
       <nav id="nav-menu">
