--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1 class="mr-2">RLS History Club</h1>
+      <h1 class="mr-2">Welcome!</h1>
       <a
         target="_blank"
         href="/rss.xml"
@@ -41,14 +41,29 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a>
 
       <p>
-        Welcome to RLS History Club's official blog website! <br / >
+        Welcome to 
+        <LinkButton
+          className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
+          href="/about"
+        >
+          RLS History Club's
+        </LinkButton>
+        Official Newspaper!
+       <br / >
         We are excited to create a history-centered community in Stevenson School.
       </p>
       <p>
-        Read the blog posts or check
+        Read the 
         <LinkButton
           className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
-          href="https://github.com/satnaing/astro-paper#readme"
+          href="/posts"
+        >
+          Blog Posts
+        </LinkButton> 
+        or check
+        <LinkButton
+          className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
+          href="/about"
         >
           About
         </LinkButton> for more info.
