--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ export interface Props {
 }
 
 const {
-  title = SITE.title,
+  title = "Rls History",
   author = SITE.author,
   description = SITE.desc,
   ogImage = SITE.ogImage,
