--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ export interface Props {
 }
 
 const {
-  title = "Rls History",
+  title = "Rls History Club Newspaper",
   author = SITE.author,
   description = SITE.desc,
   ogImage = SITE.ogImage,
