--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,8 +15,8 @@ export interface Props {
 
 const {
   title = "Rls History Club Newspaper",
-  author = SITE.author,
-  description = SITE.desc,
+  author = "Jack Zhong",
+  description = "Rls History Club Newspaper is a studentled newspaper ran by the Rls History Club",
   ogImage = SITE.ogImage,
   canonicalURL = new URL(Astro.url.pathname, Astro.site).href,
 } = Astro.props;
@@ -32,7 +32,7 @@ const socialImageURL = new URL(
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" href="/public/assets/favicon.ico" />
     <link rel="canonical" href={canonicalURL} />
     <meta name="generator" content={Astro.generator} />
 
