--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -35,6 +35,8 @@ const { props } = Astro;
   <slot />
 </main>
 
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
+
 <style>
   #main-content {
     @apply mx-auto w-full max-w-3xl px-4 pb-12;
@@ -46,3 +48,5 @@ const { props } = Astro;
     @apply mb-6 mt-2 italic;
   }
 </style>
+
+
