--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ export interface Props {
 const {
   title = "Rls History Club Newspaper",
   author = "Jack Zhong",
-  description = "Rls History Club Newspaper is a studentled newspaper ran by the Rls History Club",
+  description = "Rls History Club Newspaper is a student-led newspaper ran by Rls History Club",
   ogImage = SITE.ogImage,
   canonicalURL = new URL(Astro.url.pathname, Astro.site).href,
 } = Astro.props;
@@ -35,9 +35,10 @@ const socialImageURL = new URL(
     <link rel="icon" href="/public/assets/favicon.png" />
     <link rel="canonical" href={canonicalURL} />
     <meta name="generator" content={Astro.generator} />
+    <meta name="icon" content="/public/assets/favicon.png" />
 
     <!-- General Meta Tags -->
-    <title>{title}</title>
+    <title>{"RlsJournal - A student-led history journal"}</title>
     <meta name="title" content={title} />
     <meta name="description" content={description} />
     <meta name="author" content={author} />
