--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,7 +33,7 @@ const socialImageURL = new URL(
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" href="/public/assets/favicon.png" />
-    <link rel="favicon" href="/public/assets/favicon.png" />
+    <link rel="icon" type="image/png" href="/assets/favicon.png" />
     <link rel="canonical" href={canonicalURL} />
     <meta name="generator" content={Astro.generator} />
     <meta name="icon" content="/public/assets/favicon.png" />
