--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,6 +30,7 @@ const socialImageURL = new URL(
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Search Engine Bar Thing -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" href="/public/assets/favicon.png" />
