final build / formatting

--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -35,13 +35,13 @@ const { props } = Astro;
   <slot />
 </main>
 
-<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
   <link rel="icon" href="/public/assets/favicon.png" />
   <meta name="generator" content={Astro.generator} />
 </head>
+
 <style>
   #main-content {
     @apply mx-auto w-full max-w-3xl px-4 pb-12;
@@ -50,6 +50,8 @@ const { props } = Astro;
     @apply text-2xl font-semibold sm:text-3xl;
   }
   #main-content p {
+    font-family: 'Work Sans', sans-serif;
+    font-size: 17px; 
     @apply mb-6 mt-2 italic;
   }
 </style>
