--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -65,7 +65,32 @@ const ogUrl = new URL(
   <Footer />
 </Layout>
 
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap" rel="stylesheet">
+
 <style>
+  article.prose h1{
+    margin-bottom: 0.5rem; /* Adjust as per your needs */
+    margin-top: 0.5rem; /* Adjust as per your needs */
+  }
+  article.prose h2{
+    margin-bottom: 0.5rem; /* Adjust as per your needs */
+    margin-top: 0.5rem; /* Adjust as per your needs */
+  }
+  article.prose h3{
+    margin-bottom: 0.5rem; /* Adjust as per your needs */
+    margin-top: 0.5rem; /* Adjust as per your needs */
+  }
+  article.prose h1 + p{
+      margin-top: 0.5rem; /* Adjust as per your needs */
+  }
+  article.prose h2 + p{
+      margin-top: 0.5rem; /* Adjust as per your needs */
+  }
+  article.prose h3 + p{
+      margin-top: 0.5rem; /* Adjust as per your needs */
+  }
+  /*others*/
   main {
     @apply mx-auto w-full max-w-3xl px-4 pb-12;
   }
@@ -75,4 +100,9 @@ const ogUrl = new URL(
   .tags-container {
     @apply my-8;
   }
+  article.prose {
+    font-family: 'Work Sans', sans-serif;
+    font-size: 17px; 
+  }
 </style>
+
