--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,12 +26,12 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       <h1 class="mr-2">Welcome!</h1>
       <a
         target="_blank"
-        href="/rss.xml"
+        href="/https://github.com/jzhong0821/History-Club"
         class="rss-link"
         aria-label="rss feed"
         title="RSS Feed"
       >
-        <svg href="/https://github.com/jzhong0821/History-Club" class="rss-icon"
+        <svg xmlns="http://www.w3.org/2000/svg" class="rss-icon"
           ><path
             d="M19 20.001C19 11.729 12.271 5 4 5v2c7.168 0 13 5.832 13 13.001h2z"
           ></path><path
