--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       <h1 class="mr-2">Welcome!</h1>
       <a
         target="_blank"
-        href="/https://github.com/jzhong0821/History-Club"
+        href="https://github.com/jzhong0821/History-Club"
         class="rss-link"
         aria-label="rss feed"
         title="RSS Feed"
