--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,9 +14,9 @@ export interface Props {
 }
 
 const {
-  title = "Rls History Club Newspaper",
+  title = "The Pirate Journal - A student-led publication",
   author = "Jack Zhong",
-  description = "Rls History Club Newspaper is a student-led newspaper ran by Rls History Club",
+  description = "The Pirate Journal is a student-led publications ran by Rls History Club",
   ogImage = SITE.ogImage,
   canonicalURL = new URL(Astro.url.pathname, Astro.site).href,
 } = Astro.props;
