--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       <h1 class="mr-2">Welcome!</h1>
       <a
         target="_blank"
-        href="https://github.com/jzhong0821/History-Club"
+        href="/"
         class="rss-link"
         aria-label="rss feed"
         title="RSS Feed"
@@ -52,12 +52,12 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         Rls History Club's Official Newspaper!
       </p>
       <p>
-        Pirate Journal is a student-led publication showcasing 
+        The Pirate Journal is a student-led publication showcasing 
         blogs, critical essays, and historical analyses by our peers. 
       </p>
       <p>
         Our publication emphasizes the symbiotic relationship between open expression and academic research. 
-        Pirate Journal strives to promote diversity by challenging and refining the essence of opinion sharing. 
+        The Pirate Journal strives to promote diversity by challenging and refining the essence of opinion sharing. 
       </br>
         In pursuit of our mission, we hope to foster an environment at Stevenson School to encourage the open exchange of ideas and historical discussions. 
       </p>
