--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,7 +40,7 @@ const socialImageURL = new URL(
     <meta name="icon" content="/public/assets/favicon.png" />
 
     <!-- General Meta Tags -->
-    <title>{"The Pirate Journal - A student-led history journal"}</title>
+    <title>{"The Pirate Journal - A Student-Led Publication"}</title>
     <meta name="title" content={title} />
     <meta name="description" content={description} />
     <meta name="author" content={author} />
