google meta tags

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,7 +41,7 @@ const socialImageURL = new URL(
 
     <!-- General Meta Tags -->
     <title>{"The Pirate Journal - A Student-Led Publication"}</title>
-    <meta name="title" content={title} />
+    <meta name="title" content={"The Pirate Journal - A Student-Led Publication"} />
     <meta name="description" content={description} />
     <meta name="author" content={author} />
     <link rel="sitemap" href="/sitemap-index.xml" />
