--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const {
   author = "Jack Zhong",
   description = "The Pirate Journal is a student-led publications ran by Rls History Club",
   ogImage = SITE.ogImage,
-  canonicalURL = new URL(Astro.url.pathname, Astro.site).href,
+  canonicalURL = new URL(Astro.url.pathname, "https://rlshistory.club").href,
 } = Astro.props;
 
 const socialImageURL = new URL(
