--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,7 +46,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
           className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
           href="/about"
         >
-          Pirate Journal
+          The Pirate Journal
         </LinkButton>
         <span class="after-link-comma">,</span> 
         Rls History Club's Official Newspaper!
