--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ const {
   title = "The Pirate Journal - A student-led publication",
   author = "Jack Zhong",
   description = "The Pirate Journal is a student-led publications ran by Rls History Club",
-  ogImage = SITE.ogImage,
+  ogImage = "/public/og.png",
   canonicalURL = new URL(Astro.url.pathname, "https://rlshistory.club").href,
 } = Astro.props;
 
