home page content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,15 +51,16 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         Rls History Club's Official Newspaper!
       </p>
       <p>
-        The Pirate Journal is a student-led publication showcasing 
-        blogs, critical essays, and historical analyses by our peers. 
+        We features student work such as commentaries, critical essays, and historical analysises. 
+        It is our mission to create an open platform for students passionate in writing to sharing their opinions.
       </p>
       <p>
-        Our publication emphasizes the symbiotic relationship between open expression and academic research. 
-        The Pirate Journal strives to promote diversity by challenging and refining the essence of opinion sharing. 
-      </br>
-        In pursuit of our mission, we hope to foster an environment at Stevenson School to encourage the open exchange of ideas and historical discussions. 
+        The Pirate Journal emphasizes the symbiotic relationship between open expression and academic research. 
+        As we strive to promote diversity by challenging and refining the essence of opinion sharing, 
+        It is our mission to foster an environment at Robert Louis Stevenson School to encourage 
+        the open exchange of ideas and historical discussions. 
       </p>
+
       <p>
         Read the 
         <LinkButton
