--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,16 +41,10 @@ const socialCount = SOCIALS.filter(social => social.active).length;
 
       <p >
         Welcome to 
-        <LinkButton
-          className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
-          href="/about"
-        >
-          The Pirate Journal
-        </LinkButton>
-        <span class="after-link-comma">,</span> 
-        Rls History Club's Official Newspaper!
+        The Pirate Journal, 
+        Rls History Club's Official Publication!
       </p>
-      <p>
+      <!-- <p>
         We features student work such as commentaries, critical essays, and historical analysises. 
         It is our mission to create an open platform for students passionate in writing to sharing their opinions.
       </p>
@@ -59,7 +53,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         As we strive to promote diversity by challenging and refining the essence of opinion sharing, 
         It is our mission to foster an environment at Robert Louis Stevenson School to encourage 
         the open exchange of ideas and historical discussions. 
-      </p>
+      </p> -->
 
       <p>
         Read the 
