--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -72,6 +72,14 @@
   .prose a {
     @apply break-words hover:!text-skin-accent;
   }
+
+  .w-600px {
+    width: 650px;
+  }
+  
+  .h-50px {
+    height: 50px;
+  }
   .title { 
     
     font-size: 2rem;      /* Increasing the font size */
