--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -13,7 +13,7 @@ export interface Props {
 
 const { post } = Astro.props;
 
-const { title, author, description, ogImage, canonicalURL, pubDatetime, tags, subtitle} =
+const { title, author, description, ogImage, canonicalURL, pubDatetime, tags} =
   post.data;
 
 const { Content } = await post.render();
@@ -42,7 +42,7 @@ const ogUrl = new URL(
         ><path
           d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
         ></path>
-        
+
       </svg><span>Go back</span>
     </button>
   </div>
