--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -85,12 +85,15 @@ const ogUrl = new URL(
     margin-top: 0.5rem; /* Adjust as per your needs */
   }
   article.prose h1 + p{
+      margin-bottom: 0.5rem; /* Adjust as per your needs */
       margin-top: 0.5rem; /* Adjust as per your needs */
   }
   article.prose h2 + p{
+      margin-bottom: 0.5rem; /* Adjust as per your needs */
       margin-top: 0.5rem; /* Adjust as per your needs */
   }
   article.prose h3 + p{
+      margin-bottom: 0.5rem; /* Adjust as per your needs */
       margin-top: 0.5rem; /* Adjust as per your needs */
   }
   /*others*/
