--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       <p >
         Welcome to 
         The Pirate Journal, 
-        Rls History Club's Official Publication!
+        Robert Louis Stevenson School History Club's official student publication!
       </p>
       <!-- <p>
         We features student work such as commentaries, critical essays, and historical analysises. 
